# sil-kit-adapters-veipc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build-linux-and-windows-release.yml  trigger-adapters-ci.yaml  trigger-pkg-workflow.yaml  trigger-ska-integration-tests.yaml  trigger-ska-quality-checks.yaml
adapter/: CMakeLists.txt  SilKitAdapterVEIPC.cpp  SilKitAdapterVEIPC.hpp  SilKitAdapterVeIpc.cpp  SilKitAdapterVeIpc.hpp
cmake/: SilKitAdapterVersion.cmake
demos/: CMakeLists.txt  README.md  SilKitConfig_Adapter.silkit.yaml  SilKitDemoVeIpcAutoSender.cpp  SilKitDemoVeIpcEchoDevice.cpp  SilKitDemoVeIpcEchoServer.cpp  VeIpcEchoDevice.cpp
demos/CANoe/: SilKitConfig_CANoe.silkit.yaml  veIPC_CANoe_demo.cfg  veIPC_CANoe_demo.vCDL
demos/CANoe/_COData_veIPC_CANoe_demo/: DataSources.xml  Original_00002.vCODM  UserAdditions.vCODM
demos/CANoe4SW_SE/: createEnvForLinux.ps1  createEnvironment.sh  run.ps1  run.sh  run_all.ps1  run_all.sh  venvironment.yaml
demos/CANoe4SW_SE/internal/: createEnvForLinux.ps1  handle_remote_app.sh  run_all.sh
demos/tests/: testEchoServer.can  testEchoServer.vtesttree.yaml  testEchoServer.vtestunit.yaml
demos/veIPC/: handle_remote_app.sh  qemu_setup.sh  xipc_vtt_config.json
docs/man/: CMakeLists.txt  sil-kit-adapter-veipc.1
